# LessonsScheduleBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  main_polling.py  pyproject.toml  settings.py
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 04cd557eb83e_added_user_s_group.py  a66ca75c92dc_removed_id_primary_key_user_id_is_now_.py  cd5916709a32_first_migration.py
app/: __init__.py  models.py  network.py  reformat_lessons.py  setup_logging.py
app/api/: __init__.py  client.py  errors.py  models.py  network.py  parsing.py
app/api/models/: __init__.py  faculty.py  group.py  lesson.py
app/bot/: __init__.py  bot.py  callback.py  locales.py  reformat_lessons.py
app/bot/FSM/: states.py
app/bot/api/: __init__.py  client.py  models.py  network.py  parsing.py
app/bot/handlers/: registration.py  router.py  user.py
app/bot/handlers/dialogs/registration/: __init__.py  dialog.py  getters.py  handlers.py
app/bot/keyboards/: lessons.py  main_menu.py  register.py
app/bot/middlewares/: db_conn.py  outer.py  repo.py  shadow_ban.py  statistics.py  user.py
app/bot/services/: reformat_lessons.py  show_schedule.py
app/db/: connection.py  db.py
app/db/models/: __init__.py  activity.py  user.py
app/db/requests/: activity.py  users.py
app/handlers/: router.py
app/middlewares/: outer.py
bot/: reformat_lessons.py
bot/api/: client.py  network.py  parsing.py
bot/handlers/: router.py
