[project]
name = "lessonsschedulebot"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.11"
dependencies = [
    "aiogram==3.24.0",
    "aiohttp>=3.12.15",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy==2.0.45",
]


[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "ruff>=0.14.11",
    "ty>=0.0.10",
]

[tool.ruff]
indent-width = 4
line-length = 120
output-format = "grouped"
show-fixes = true
preview = true

[tool.ruff.lint]
extend-select = [
    "B",
    "E",
    "G",
    "LOG",
    "PLC",
    "PYI",
    "Q",
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "C90",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "COM",
    "FBT",
    "N",
    "S",
]
fixable = ["ALL"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
