[project]
name = "lessonsschedulebot"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.11"
dependencies = [
    "aiogram==3.24.0",
    "aiohttp>=3.12.15",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy==2.0.45",
]



[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "alembic",
]
indent-width = 4
line-length = 115
output-format = "grouped"
show-fixes = true
preview = true

[tool.ruff.lint]
extend-select = [
    "B",
    "E",
    "G",
    "LOG",
    "PLC",
    "PYI",
    "Q",
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "C90",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "COM",
    "FBT",
    "N",
    "S",
]
extend-ignore = [
    "COM812"
]
fixable = ["ALL"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
