[project]
name = "lessonsschedulebot"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.14.2"
dependencies = [
    "aiogram==3.25.0",
    "aiogram-dialog>=2.4.0",
    "aiohttp==3.13.3",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "redis==7.2.0",
    "sqlalchemy[asyncio]==2.0.46",
]



[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "alembic",
]
indent-width = 4
line-length = 120
output-format = "grouped"
show-fixes = true
preview = true

[tool.ruff.lint]
extend-select = [
    "ASYNC",
    "B",
    "E",
    "G",
    "LOG",
    "PLC",
    "PYI",
    "Q",
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "C90",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "COM",
    "FBT",
    "N",
    "S",
]
extend-ignore = [
    "COM812"
]
fixable = ["ALL"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
